11/9/2008:	v4.1.2
	- support serial lines (fate #301595)

19/8/2008:	v4.1.1
	- activated SLE themes

18/8/2008:	v4.1.0
	- cooperate with mboot module
	- enhanced gfxboot script
	- fixed bug in gfxboot-font ('--add' option cleared char list)
	- support new text formatting tags (<p> & <ul>)
	- new help texts
	- fix help to better tolerate broken help setup
	- bootloader always beeps

26/5/2008:	v4.0.14
	- updated translations

26/5/2008:	v4.0.13
	- make driver update menu configurable
	- added 'download url' item to driver update menu

26/5/2008:	v4.0.12
	- worked on 11.0 theme

19/5/2008:	v4.0.11
	- turn sound off before loading kernel (bnc #392016)
	- partly moved to new theme
	- use 32 bit graphics mode for bootloader

15/5/2008:	v4.0.10
	- rewrote config file parser
	- move most layout parameters to config file

9/5/2008:	v4.0.9
	- show F9 hint

9/5/2008:	v4.0.8
	- updated translations

7/5/2008:	v4.0.7
	- 'F9' adds 'braille=1' to command line

28/4/2008:	v4.0.6
	- WAV file playback works again
	- added beep when bootloader is ready (fate #303482)
	- added 'visually impaired' mode key (F9) (fate #303482)
	- added speech output
	- added Thai

14/4/2008:	v4.0.5
	- gfxboot doesn't always need a bootloader

11/4/2008:	v4.0.4
	- fix gfxboot script

10/4/2008:	v4.0.3
	- gfxboot can handle themes & translations
	- fixed typo in gfxboot.cfg

8/4/2008:	v4.0.2
	- added 'gfxboot' (boot screen config tool)
	- added man page
	- new themes
	- package layout changed

4/2/2008:	v4.0.1
	- added optional 'mediacheck'

4/2/2008:	v4.0.0
	- source tree layout changed ('make prep' no longer required)

8/10/2007:	v3.3.39
	- Avi Kivity: SS does not survive switch to PM in KVM (#307194)

25/9/2007:	v3.3.38
	- 'benventuno' is not really an italian word (#327546)

14/9/2007:	v3.3.37
	- fixed build

12/9/2007:	v3.3.36
	- always ask for VBE2 info (to e.g. get 1366x768 listed - #298025)
	- new welcome screen animation

10/9/2007:	v3.3.35
	- updated translations

22/8/2007:	v3.3.34