@@ -130,6 +130,18 @@ dud.file=
 dud.url=
 ; if 'dud=url': menu item name (default = 'URL')
 dud.url.name=
+; serial line setup (up to four lines)
+; format: port,baud,dev
+;   - port: 0-3: first four BIOS serial lines (COM1-COM4); >=4: I/O port (0x3f8)
+;   - baud: baud rate (e.g. 115200); 0 = autodetect (considers baud rates >= 9600)
+;   - dev: linux device name (e.g. ttyS0)
+; - all lines are set up with 8 bits, no parity, 1 stop bit
+; - if the bootloader also has a serial line setup, the port is
+;   automatically used
+serial.line0=0,0,ttyS0
+serial.line1=1,0,ttyS1
+serial.line2=
+serial.line3=
 
 [boot]
 ; show welcome animation
