@@ -94,9 +94,9 @@ background=pback.jpg
 
 [install]
 ; show welcome animation
-welcome=0
+welcome=1
 ; beep when menu is ready
-beep=0
+beep=1
 ; main menu item shown only if iso is tagged for media check
 mediacheck=mediachk
 ; main menu items where user can't add boot options
@@ -147,4 +147,4 @@ serial.line3=
 ; show welcome animation
 welcome=0
 ; beep when menu is ready
-beep=0
+beep=1
