@@ -1,3 +1,7 @@
+25/9/2008:	v4.1.3
+	- better monitor detection (bnc #407786)
+	- fix default video size selection (bnc #407786)
+
 11/9/2008:	v4.1.2
 	- support serial lines (fate #301595)
 
